# kling_grpo_routine

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
configs/deepspeed/: zero2_1gpu.yaml  zero2_2gpu.yaml  zero2_4gpu.yaml  zero2_8gpu.yaml  zero3_2x8gpu_offload.yaml  zero3_6gpu_offload.yaml  zero3_7gpu_offload.yaml  zero3_8gpu_offload.yaml
docker/: docker-compose.yml
qwen_vl_utils/: __init__.py  vision_process.py
scripts/: agent_grpo_1gpu_direct.sh  agent_grpo_1gpu_vllm.sh  grpo_humanbody_1gpu_debug.sh  grpo_humanbody_2gpu.sh  grpo_humanbody_2x8gpu_zero3.sh  grpo_humanbody_4gpu.sh  grpo_humanbody_6gpu.sh  grpo_humanbody_6gpu_zero3.sh  grpo_humanbody_7gpu_zero3.sh  grpo_humanbody_8gpu.sh
src/reward_model_train/: __init__.py  logging.py  utils.py
src/reward_model_train/agents/: multi_turn.py  tool_execution.py  tools.py
src/reward_model_train/cli/: agent_grpo_train.py  grpo_train.py  sft_train.py
src/reward_model_train/data/: __init__.py  humanbody.py  pipelines.py
src/reward_model_train/models/: agent_wrapper.py  agent_wrapper_src.py  agent_wrapper_utils.py
src/reward_model_train/models/openrlhf/cli/: eval_ray.py  train_ppo_ray.py
src/reward_model_train/models/openrlhf/datasets/: __init__.py  prompts_dataset.py
src/reward_model_train/rewards/: __init__.py  accuracy_rewards.py  format_rewards.py  registry.py
src/reward_model_train/vision/: __init__.py
trl_fork/: __init__.py
trl_fork/trainer/: __init__.py  grpo_trainer_qwen_agent_vllm.py  grpo_trainer_qwen_vllm.py  grpo_trainer_qwen_wo_vllm.py
(+19 files in other folders)
